--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
-  </body>
-</html>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img src="https://cdn.shopify.com/s/files/1/0086/0795/7054/files/Golden-Retriever.jpg?v=1645179525" alt="Dog breed India"/>
+    <img src="https://cdn.shopify.com/s/files/1/0086/0795/7054/files/Golden-Retriever.jpg?v=1645179525" alt="Dog breed" title="India Dog breed"/>
+    </body>
+    </html>
+  
